# Docpet_Infra

./: Makefile  README.md  main.tf  variables.tf
.terraform/: terraform.tfstate
.terraform/modules/: modules.json
locust/: main.py  pyproject.toml  test.bat
modules/vercel/: variables.tf  vercel.tf
postman/: docpet_collections.postman_collection.json  docpet_environments.postman_environment.json
services/deploy_info_service/: push_notif.lua
