[tool.poetry]
name = "docpet-locust"
version = "0.1.0"
description = "Docpet Performance Testing"
authors = ["belajarqywok <belajarqywok@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
